create auth router
